--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,12 @@ dependencies {
     //Epoxy
     def epoxyVersion = "4.6.3"
     implementation "com.airbnb.android:epoxy:$epoxyVersion"
-    implementation "com.airbnb.android:epoxy-processor:$epoxyVersion"
+    kapt "com.airbnb.android:epoxy-processor:$epoxyVersion"
+    implementation "com.airbnb.android:epoxy-paging:$epoxyVersion"
+
+    //Paging
+    def paging_version = "2.1.1"
+    implementation("androidx.paging:paging-runtime-ktx:$paging_version")
 
 }
 kapt {
