--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,9 +81,10 @@ dependencies {
     implementation "com.airbnb.android:epoxy:$epoxyVersion"
     kapt "com.airbnb.android:epoxy-processor:$epoxyVersion"
     implementation "com.airbnb.android:epoxy-paging:$epoxyVersion"
+    implementation "com.airbnb.android:epoxy-paging3:$epoxyVersion"
 
     //Paging
-    def paging_version = "2.1.1"
+    def paging_version = "3.1.0"
     implementation("androidx.paging:paging-runtime-ktx:$paging_version")
 
 }
